--- a/index.html
+++ b/index.html
@@ -128,17 +128,8 @@
 	
 <div class="woodmart-shopping-cart wd-tools-element woodmart-cart-design-5 woodmart-cart-alt cart-widget-opener">
 	<a href="https://www.elfbar.com.ua/cart/" title="Корзина">
-		<span class="woodmart-cart-icon wd-tools-icon">
-						
-													<span class="woodmart-cart-number">0 <span>items</span></span>
 		
-							</span>
-		<span class="woodmart-cart-totals wd-tools-text">
-			
-			<span class="subtotal-divider">/</span>
-									<span class="woodmart-cart-subtotal"><span class="woocommerce-Price-amount amount"><bdi>0&nbsp;<span class="woocommerce-Price-currencySymbol">грн.</span></bdi></span></span>
 		
-				</span>
 	</a>
 	</div>
 </div>
@@ -340,4 +331,5 @@
 
 
 
-</strong></strong></strong></strong></div></body></html>
+</strong></strong></strong></strong></div>
+</body></html>
